css/index.scss
/* ... */
body {
  background-color: #fff;
  margin: 0;
  width: 100%;
  font-family: $font-brand;
  font-size: 1vw;
}

strong, b {
  font-weight: 700
}

a {
  color: inherit;
}

.content {
  position: relative;
}

.mobile-nav {
  display: none;
}

.subdued {
  opacity: .5;
}

#contact-us-gmap {
  width: 100%;
  height: 100%;
}

#contact-us-home-section {
  position: relative;
  color: $grey;
  min-height: 473px;
  .contact-us-gmap-container {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
  }
  .contact-content {
    max-width: $page-max-width;
    margin: 0 auto;
    top: 50%;
    transform: translateY(-50%);
    left: 1%;
    width: 55%;
    z-index: 2;
    position: absolute;
    .contact-header {
      font-size: 3em;
      background-color: white;
      padding: 1em;
      padding-left: calc(80px - 1%);
    }
    .contact-body {
      font-size: 1.3em;
      background: rgba(255, 255, 255, 0.9);
      padding: 15px 22px;
      > ul {
        list-style-type: none;
        margin: 0;
        padding-left: calc(30px - 1%);
        > li {
          padding: 12px;
        }
      }
    }
  }
}

.black {
  color: black;
}
.left {
  float: left;
  width: 49%;
  padding-right: 15px;
}

.right {
  float: right;
  width: 49%;
  padding-left: 1px;
}

.contact-us-link {
  cursor: pointer;
}

.property-slideshow {
  padding-top: 12px;
}

.preview-contents {
  padding: 8px;
}

.underline {
  text-decoration: underline;
}

.preview-map {
  width: 230px;
  position: absolute;
  margin-top: -30px;

}

.preview-title {
  color: white;
  font-size: 1.5em;
  position: absolute;
  margin-top: -65px;
  margin-left: 31px;
}

.medium-white-text {
  color: white;
  font-size: 1.5em;
  opacity: .95;
}

.preview-text {
  font-size: .75em;
  font-weight: lighter;
  color: #858585;
}

.review {
  outline: none;
  padding: 0 60px;
}

#home-image {
  vertical-align: middle;
}

.logo-upper-left {
  position: absolute;
  top: 35px;
  left: 35px;
  width: 278px;
  height: auto;
  z-index: 2;
}

.ham-menu {
  @include hamburger-menu;
}

#top-nav {
  font-size: 14px;
  color: white;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 3;
  > ul {
    list-style-type: none;
    margin: 30px 30px 0 0;
    > li {
      display: inline;
      font-size: 1.2em;
      padding: 8px;
      > a {
        text-decoration: none;
      }
    }
  }
}

.ham-menu-mobile {
  @include hamburger-menu;
}

.ham-menu-home {
  display: none;
}

.contact-us-modal {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(255, 255, 255, 0.8);
  z-index: 10;
  .contact-form {
    width: 70%;
    margin: 112px auto 0 auto;
    font-size: 1.6em;
    padding-bottom: 10px;
    text-align: center;
    background-color: white;
    box-shadow: 0px 0px 18px 6px #f2f2f2;
    position: relative;
    max-width: 1200px;
    .contact-close {
      @include close-button;
      position: absolute;
      top: 5px;
      right: 5px;
      color: $primary-color;
      width: 13px;
      height: 21px;
      cursor: pointer;
    }
    .form {
      margin: 36px;
      > p {
        padding-top: 75px;
        font-weight: 50;
        margin-bottom: 42px;
        color: #777777;
        opacity: .9;
        font-size: 2em;
      }
      > input {
        display: block;
        margin: 0 auto 18px auto;
        width: 72%;
        height: 2.8em;
        opacity: .8;
        border-style: solid;
        border-width: thin;
        border-color: #efefef;
        background-color: #fcfcfc !important;
      }
      > button {
        width: 72%;
        height: 2.5em;
        border-radius: 500px;
        margin-top: 8px;
        font-weight: 800;
        color: $primary-color-darker-darker;
        border-color: $primary-color-darker-darker;
        border-style: solid;
        margin-bottom: 80px;
        margin-top: 20px;
      }
    }
  }
}

.nav-modal {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: white;
  z-index: 10;
  text-align: center;
  .inner {
    padding: 15px;
    position: relative;
    .modal-logo {
      width: 278px;
      position: absolute;
      top: 35px; left: 35px;
    }
    .menu-close {
      @include close-button;
    }

    ul.nav {
      padding: 8% 0 0;
      list-style: none;
      font-size: 2em;
      text-align: center;
      margin: 0;
      li a {
        display: block;
        color: #888;
        line-height: 2;
        font-size: 0.8em;
        text-decoration: none;
        &.active {color: $primary-color;}
      }
    }
  }
}

.home-intro-left {
  width: 50%;
  margin-top: -36px;
  background-color: white;
  font-family: $font-brand;
  color: #b4b3b3;
  letter-spacing: 0.5px;
  color: #858585;
  overflow: hidden;
  > div {
    margin-top: -35px;
    padding: 80px;
    > p {
      opacity: .95;
    }
  }
}

.home-intro-right {
  width: 50%;
  background-image: url("../images/about-us.jpg");
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
}

.preview-header {
  height: 50%;
  width: 100%;
}

#header-home {
  position: relative;
  background-image: url(../images/background.png);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center 0;
  text-align: center;
  height: 75vh;
}

#header-content {
  position: absolute;
  width: 100%;
  top: 50%;
  transform: translateY(-50%);
}

#header-logo {
  height: 47px;
}

.scroll-arrow {
  position: absolute;
  width: 54px;
  margin-left: -(54px/2);
  bottom: 10%;
  left: 50%;
}

#header-text {
  font-family: $font-brand;
  color: #858585;
  font-size: 1.5em;
  padding-top: 25px;
}

#item-top {
  margin-top: -442px;
  background-color: $background-color;
}

.section-header {
  font-family: $font-brand;
  color: #b4b3b3;
  letter-spacing: 0.5px;
  color: #858585;
  font-size: 1.8em;
  > span {
    color: $primary-color;
  }
}
/* ... */

